unpackaged/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Non_Gift_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Transaction_Amount__c</fullName>
    <label>Non-Gift Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>